--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.15.4",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "core-js": "^3.18.0",
     "graphql": "^14.5.8",
     "meteor-node-stubs": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.2.0",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^16.14.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
@@ -17,6 +20,7 @@
     "simpl-schema": "^1.12.0",
     "sweetalert": "^2.1.2",
     "uniforms": "^3.6.0",
+    "uniforms-bootstrap5": "^3.8.1",
     "uniforms-bridge-simple-schema-2": "^3.6.0",
     "uniforms-semantic": "^3.6.0"
   },
