--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,10 @@
     "core-js": "^3.18.0",
     "graphql": "^14.5.8",
     "meteor-node-stubs": "^1.1.0",
+    "node-sass": "^7.0.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.8",
+    "postcss-cli": "^9.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^2.2.0",
@@ -15,14 +19,11 @@
     "react-dom": "^16.14.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.3.1",
     "simpl-schema": "^1.12.0",
     "sweetalert": "^2.1.2",
     "uniforms": "^3.6.0",
     "uniforms-bootstrap5": "^3.8.1",
-    "uniforms-bridge-simple-schema-2": "^3.6.0",
-    "uniforms-semantic": "^3.6.0"
+    "uniforms-bridge-simple-schema-2": "^3.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
