--- a/app/package.json
+++ b/app/package.json
@@ -44,7 +44,7 @@
     "css-compile": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true --precision 6 scss -o imports/startup/client/css/",
     "css-prefix": "postcss src/css/theme.css --replace --use autoprefixer --map",
     "css": "npm-run-all css-compile css-prefix",
-    "lint": "eslint --quiet --fix --ext .jsx --ext .js ./imports",
+    "lint": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "testcafe-development": "testcafe chrome tests/*.testcafe.js",
     "testcafe": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\""
   }
