--- a/app/package.json
+++ b/app/package.json
@@ -2,41 +2,41 @@
   "name": "meteor-react-bootstrap-template",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "^7.17.9",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
-    "core-js": "^3.18.0",
+    "core-js": "^3.22.3",
     "graphql": "^14.5.8",
-    "meteor-node-stubs": "^1.2.1",
+    "meteor-node-stubs": "^1.2.3",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-bootstrap": "^2.2.0",
-    "react-bootstrap-icons": "^1.7.2",
+    "react-bootstrap": "^2.3.1",
+    "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^16.14.0",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^5.3.1",
+    "react-router-dom": "^5.3.1",
     "simpl-schema": "^1.12.0",
     "sweetalert": "^2.1.2",
-    "uniforms": "^3.6.0",
-    "uniforms-bootstrap5": "^3.8.1",
-    "uniforms-bridge-simple-schema-2": "^3.6.0"
+    "uniforms": "^3.9.1",
+    "uniforms-bootstrap5": "^3.9.1",
+    "uniforms-bridge-simple-schema-2": "^3.9.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-meteor": "^7.3.0",
-    "eslint-plugin-react": "^7.25.3",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-utils": "^2.1.0",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.13",
     "postcss-cli": "^9.1.0",
-    "testcafe": "^1.18.3"
+    "testcafe": "^1.18.6"
   },
   "scripts": {
     "start": "npm-run-all css start-meteor",
@@ -45,7 +45,8 @@
     "css-prefix": "postcss src/css/theme.css --replace --use autoprefixer --map",
     "css": "npm-run-all css-compile css-prefix",
     "lint": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
-    "testcafe-development": "testcafe chrome tests/*.testcafe.js",
-    "testcafe": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\""
+    "testcafe": "testcafe chrome tests/*.testcafe.js",
+    "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
+    "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\""
   }
 }
