--- a/app/package.json
+++ b/app/package.json
@@ -22,16 +22,18 @@
     "uniforms-bridge-simple-schema-2": "^3.9.1"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "autoprefixer": "^10.4.7",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-meteor": "^7.3.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-utils": "^2.1.0",
+    "eslint-utils": "^3.0.0",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
