--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.18.3",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "classnames": "^2.3.1",
     "core-js": "^3.22.7",
     "graphql": "^16.5.0",
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
@@ -34,18 +33,10 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-utils": "^3.0.0",
-    "node-sass": "^7.0.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
-    "postcss-cli": "^9.1.0",
     "testcafe": "^1.19.0"
   },
   "scripts": {
-    "start": "npm-run-all css start-meteor",
-    "start-meteor": "meteor --no-release-check --exclude-archs web.browser.legacy,web.cordova --settings ../config/settings.development.json",
-    "css-compile": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true --precision 6 scss -o imports/startup/client/css/",
-    "css-prefix": "postcss imports/startup/client/css/theme.css --replace --use autoprefixer --map",
-    "css": "npm-run-all css-compile css-prefix",
+    "start": "meteor --no-release-check --exclude-archs web.browser.legacy,web.cordova --settings ../config/settings.development.json",
     "lint": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "testcafe": "testcafe chrome tests/*.testcafe.js",
     "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
