--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.18.3",
-    "bootstrap": "^5.2.0-beta1",
+    "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "core-js": "^3.23.2",
     "graphql": "^16.5.0",
