Revert "Merge branch 'main' of https://github.com/ics-software-engineering/meteor-application-template-react"
This reverts commit 83f7ca5f518003b051451f7f64a1b6bb3324af69, reversing
changes made to f6b3937ce55c32f78395c43ee55e6e0a940bb452.

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,8 +1,7 @@
 {
   "defaultAccounts": [
-    { "email": "admin@foo.com", "password": "changeme", "role": "ADMIN", "firstName": "Admin", "lastName": "MATRP"
-    },
-    { "email": "john@foo.com", "password": "changeme", "role": "USER" , "firstName": "John", "lastName": "Doe" }
+    { "email": "admin@foo.com", "password": "changeme", "role": "admin" },
+    { "email": "john@foo.com", "password": "changeme" }
   ],
 
   "defaultData": [
@@ -10,8 +9,5 @@
     { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
-  ],
-  "public": {
-    "development": true
-  }
+  ]
 }
