--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.18.3",
-    "bootstrap": "^5.2.0-beta1",
+    "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
     "core-js": "^3.23.2",
     "graphql": "^16.5.0",
@@ -24,7 +24,6 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
@@ -34,19 +33,14 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-utils": "^3.0.0",
-    "faker": "^5.5.3",
-    "fast-check": "^2.17.0",
-    "puppeteer": "^15.3.2",
     "testcafe": "^1.19.0"
   },
   "scripts": {
     "start": "meteor --no-release-check --exclude-archs web.browser.legacy,web.cordova --settings ../config/settings.development.json",
     "lint": "eslint --quiet --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "lint-fix": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
-    "test-unit": "cross-env TEST_BROWSER_DRIVER=puppeteer MOCHA_TIMEOUT=150000 meteor test --exclude-archs web.browser.legacy,web.cordova --no-release-check --once --driver-package meteortesting:mocha --port 3100",
-    "test-integration": "cross-env METEOR_NO_RELEASE_CHECK=1 TEST_BROWSER_DRIVER=puppeteer meteor test --full-app --once --driver-package meteortesting:mocha --port 3100",
-    "test-acceptance-development": "testcafe chrome tests/*.testcafe.js",
-    "test-acceptance-development-single": "testcafe chrome tests/*.testcafe.js -t \"Test that sign up and sign out work\"",
-    "test-acceptance-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\""
+    "testcafe": "testcafe chrome tests/*.testcafe.js",
+    "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
+    "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\""
   }
 }
