--- a/app/package.json
+++ b/app/package.json
@@ -2,38 +2,38 @@
   "name": "meteor-application-template-react",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.18.3",
+    "@babel/runtime": "^7.18.9",
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
-    "core-js": "^3.23.2",
+    "core-js": "^3.24.1",
     "graphql": "^16.5.0",
-    "meteor-node-stubs": "^1.2.3",
+    "meteor-node-stubs": "^1.2.5",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "simpl-schema": "^1.12.2",
+    "simpl-schema": "^1.12.3",
     "sweetalert": "^2.1.2",
-    "uniforms": "^3.9.1",
-    "uniforms-bootstrap5": "^3.9.1",
-    "uniforms-bridge-simple-schema-2": "^3.9.1"
+    "uniforms": "^3.10.0",
+    "uniforms-bootstrap5": "^3.10.0",
+    "uniforms-bridge-simple-schema-2": "^3.10.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
-    "eslint": "^8.18.0",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx": "^0.1.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-meteor": "^7.3.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-utils": "^3.0.0",
-    "testcafe": "^1.19.0"
+    "testcafe": "^1.20.0"
   },
   "scripts": {
     "start": "meteor --no-release-check --exclude-archs web.browser.legacy,web.cordova --settings ../config/settings.development.json",
@@ -41,6 +41,7 @@
     "lint-fix": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "testcafe": "testcafe chrome tests/*.testcafe.js",
     "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
-    "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\""
+    "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\"",
+    "test-all": "meteor reset && meteor npm run lint && meteor npm run testcafe-ci"
   }
 }
