--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,10 @@
   "name": "meteor-application-template-react",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.19.4",
+    "@babel/runtime": "^7.20.1",
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
-    "core-js": "^3.25.5",
+    "core-js": "^3.26.0",
     "graphql": "^16.6.0",
     "meteor-node-stubs": "^1.2.5",
     "prop-types": "^15.7.2",
@@ -13,8 +13,8 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
-    "react-router": "^6.4.2",
-    "react-router-dom": "^6.4.2",
+    "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "simpl-schema": "^3.0.1",
     "sweetalert": "^2.1.2",
     "uniforms": "^3.10.1",
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
-    "eslint": "^8.25.0",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx": "^0.1.0",
@@ -33,7 +33,7 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-utils": "^3.0.0",
-    "testcafe": "^2.0.1"
+    "testcafe": "^2.0.2"
   },
   "scripts": {
     "start": "meteor --no-release-check --exclude-archs web.browser.legacy,web.cordova --settings ../config/settings.development.json",
@@ -42,7 +42,7 @@
     "testcafe": "testcafe chrome tests/*.testcafe.js",
     "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
     "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\"",
-    "test-all": "meteor reset && meteor npm run lint && meteor npm run testcafe-ci",
+    "test-all": "meteor reset && meteor npm run lint && meteor npm run unimported && meteor npm run testcafe-ci",
     "unimported": "npx unimported"
   }
 }
